feat: apply v1-based rewrite